Додано друге зображення

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
 	<title>
-	Second
+	Мельник
 	</title>
 </head>
 
 
 <body>
-	hello w
+	<img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkDH6bjdfVmIkhSGqN8aobpG-P6-1wHFnV2A&s">
+	<img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkDH6bjdfVmIkhSGqN8aobpG-P6-1wHFnV2A&s">
 </body>
 
 
